[gd_scene load_steps=4 format=3 uid="uid://c80sqk67lyeqk"]

[ext_resource type="Theme" uid="uid://boewen5utu4mk" path="res://assets/themes/default_theme.tres" id="1_m0tjp"]
[ext_resource type="Script" path="res://scripts/menu/options_menu.gd" id="2_2ksju"]
[ext_resource type="PackedScene" uid="uid://bdi44jg7t1uvo" path="res://scenes/menus/components/volume_slider.tscn" id="3_rfkc8"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_m0tjp")
script = ExtResource("2_2ksju")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0196078, 0.0196078, 0.0196078, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Options"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MasterLabelVolume" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Master volume"

[node name="VolumeSlider" parent="MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("3_rfkc8")]
layout_mode = 2
size_flags_vertical = 1
bus_name = "Master"

[node name="MusicLabelVolume" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="VolumeSlider2" parent="MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("3_rfkc8")]
layout_mode = 2
bus_name = "music"

[node name="SFXLabelVolume" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "SFX Volume"

[node name="VolumeSlider3" parent="MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("3_rfkc8")]
layout_mode = 2
bus_name = "sfx"

[node name="ButtonVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonVBox/BackButton" to="." method="_on_back_button_pressed"]
